--- a/helm/ultralims/templates/secret.yaml
+++ b/helm/ultralims/templates/secret.yaml
@@ -5,15 +5,16 @@ metadata:
   labels:
     {{- include "ultralims.labels" . | nindent 4 }}
 stringData:
-  {{- with .Values.db }}
-  DBDRIVE: {{ .driver }}
-  db_server: {{ .name }}
-  host_server: {{ .host }}
-  password_server: {{ .password }}
-  port_server: {{ .port | toString }}
-  user_server: {{ .user }}
-  {{- end }}
-  {{- with .Values.redis }}
-  REDIS_PATH: dGNwOi8vcmVkaXMtc2VydmVyOjYzNzk=
+  {{- with .Values.config }}
+  DBDRIVE: {{ .db.driver }}
+  db_server: {{ .db.name }}
+  host_server: {{ .db.host }}
+  password_server: {{ .db.password }}
+  port_server: {{ .db.port | toString | quote }}
+  user_server: {{ .db.user }}
+  REDIS_PATH: {{ .redis.path }}
+  JWTWIZARD: {{ .jwt.wizard }}
+  JWTSECRET: {{ .jwt.secret }}
+  AZUREAPPSECRET: {{ .azureAppSecret }}
   {{- end }}
 type: Opaque
