--- a/helm/ultralims/Chart.yaml
+++ b/helm/ultralims/Chart.yaml
@@ -21,9 +21,10 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "3.05.026.006-sgb"
 
 dependencies:
+  # https://artifacthub.io/packages/helm/bitnami/redis
   - name: redis
     repository: https://charts.bitnami.com/bitnami
     version: "19.5.0"
