--- a/helm/ultralims/templates/deployment.yaml
+++ b/helm/ultralims/templates/deployment.yaml
@@ -27,10 +27,12 @@ spec:
       serviceAccountName: {{ include "ultralims.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.pvc.enabled }}
       volumes:
         - name: ultralims-empresas
           persistentVolumeClaim:
             claimName: {{ include "ultralims.fullname" . }}-empresas
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -47,13 +49,11 @@ spec:
             - secretRef:
                 name: {{ include "ultralims.fullname" . }}
           volumeMounts:
-            - name: {{ include "ultralims.fullname" . }}-empresas
+            {{- if .Values.pvc.enabled }}
+            - name: ultralims-empresas
               mountPath: /var/www/html/empresas
+            {{- end }}
           livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
             httpGet:
               path: /
               port: http
