Atualização para versão 0.1.1; Correção de StorageClass nulo; Forçar variáveis de ambiente nulas para "" (ConfigMap & Secret)

--- a/helm/ultralims/templates/pvc.yaml
+++ b/helm/ultralims/templates/pvc.yaml
@@ -12,7 +12,7 @@ spec:
   resources:
     requests:
       storage: {{ .storage.size }}
-  storageClassName: {{ .storage.className }}
+  storageClassName: {{ .storage.className | quote }}
   volumeMode: Filesystem
   {{- end -}}
 {{- end -}}
