--- a/helm/ultralims/templates/secret.yaml
+++ b/helm/ultralims/templates/secret.yaml
@@ -12,9 +12,13 @@ stringData:
   password_server: {{ .db.password }}
   port_server: {{ .db.port | toString | quote }}
   user_server: {{ .db.user }}
-  REDIS_PATH: {{ .redis.path }}
-  JWTWIZARD: {{ .jwt.wizard }}
-  JWTSECRET: {{ .jwt.secret }}
-  AZUREAPPSECRET: {{ .azureAppSecret }}
+  # Session on Redis
+  SESSION_HANDLER: redis
+  REDIS_PATH: {{ .redis.path | quote }}
+  SESSION_PATH: {{ .redis.path | quote }}
+  # JWT
+  JWTWIZARD: {{ .jwt.wizard | quote }}
+  JWTSECRET: {{ .jwt.secret | quote }}
+  AZUREAPPSECRET: {{ .azureAppSecret | quote }}
   {{- end }}
 type: Opaque
