--- a/helm/ultralims/values.yaml
+++ b/helm/ultralims/values.yaml
@@ -46,6 +46,9 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+    kubernetes.io/haproxy.router.openshift.io/timeout: 900s
+    kubernetes.io/meta.helm.sh/release-name: ultralims
+    kubernetes.io/meta.helm.sh/release-namespace: sgb-ultralims-prod
   hosts:
     - host: ''
       paths:
