Acréscimo do componente de importar resultados. Reorganização dos manifestos e Values

--- a/helm/ultralims/templates/secret.yaml
+++ b/helm/ultralims/templates/secret.yaml
@@ -14,7 +14,7 @@ stringData:
   user_server: {{ .db.user }}
   # Session on Redis
   SESSION_HANDLER: redis
-  REDIS_PATH: {{ .redis.path | quote }}
+  REDIS_PATH: {{ .redis.path | quote }}    # tcp://ultralims-redis-master.sgb-ultralims-prod.svc.cluster.local:6379?auth=ZUfOSnnDYc
   SESSION_PATH: {{ .redis.path | quote }}
   # JWT
   JWTWIZARD: {{ .jwt.wizard | quote }}
