--- a/helm/ultralims/templates/configmap.yaml
+++ b/helm/ultralims/templates/configmap.yaml
@@ -1,17 +1,19 @@
+{{- $svcHost := include "ultralims.importaResultado.fullname" . -}}
+{{- $svcPort := .Values.importaResultado.service.port -}}
+{{- $importaResultado := printf "http://%s.%s.svc.cluster.local:%s" $svcHost .Release.Namespace $svcPort -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "ultralims.fullname" . }}
   labels:
     {{- include "ultralims.labels" . | nindent 4 }}
-data:  
+data:
   {{- with .Values.config }}
   name_server: {{ .name_server }}
   empresa_server: {{ .empresa_server | toString | quote }}
   protocol_server: {{ .protocol_server }}
-  URLIMPORTARESULTADO: {{ .importaResultado.url }}
+  URLIMPORTARESULTADO: {{ $importaResultado }}
   {{- end }}  
-  APACHE_PORT: {{ .Values.service.port | toString | quote }}
   APACHE_LOG_DIR: "/tmp"
   APACHE_PID_FILE: "/tmp/apache2.pid"
   APACHE_RUN_GROUP: root
