--- a/helm/ultralims/templates/tests/test-connection.yaml
+++ b/helm/ultralims/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "ultralims.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "ultralims.fullname" . }}:{{ .Values.web.service.port }}']
   restartPolicy: Never
