Adicionado conf para redis. Bump to v0.2.0

--- a/helm/ultralims/templates/secret.yaml
+++ b/helm/ultralims/templates/secret.yaml
@@ -1,3 +1,9 @@
+{{- $redisPort := .Values.redis.master.service.ports.redis | toString -}}
+{{- $redisHost := printf "tcp://%s-redis-master.%s.svc.cluster.local:%s" ( include "ultralims.fullname" . ) .Release.Namespace $redisPort -}}
+{{- if .Values.redis.auth.password -}}
+  {{- $redisHost = printf "%s?auth=%s" $redisHost .Values.redis.auth.password -}}
+{{- end -}}
+{{- $_redisHost := .Values.redis.enabled | ternary $redisHost .Values.config.redis.path -}}
 kind: Secret
 apiVersion: v1
 metadata:
@@ -14,8 +20,8 @@ stringData:
   user_server: {{ .db.user }}
   # Session on Redis
   SESSION_HANDLER: redis
-  REDIS_PATH: {{ .redis.path | quote }}    # tcp://ultralims-redis-master.sgb-ultralims-prod.svc.cluster.local:6379?auth=ZUfOSnnDYc
-  SESSION_PATH: {{ .redis.path | quote }}
+  REDIS_PATH: {{ $_redisHost }}
+  SESSION_PATH: {{ $_redisHost }}
   # JWT
   JWTWIZARD: {{ .jwt.wizard | quote }}
   JWTSECRET: {{ .jwt.secret | quote }}
