adição do componente de importa resultados

--- a/helm/ultralims/templates/importa-resultados/deployment.yaml
+++ b/helm/ultralims/templates/importa-resultados/deployment.yaml
@@ -44,7 +44,7 @@ spec:
             - configMapRef:
                 name: {{ include "ultralims.fullname" . }}
             - secretRef:
-                name: {{ include "ultralims.fullname" . }}
+                name: {{ include "ultralims.importaResultado.fullname" . }}
           # livenessProbe:
           #   httpGet:
           #     path: /
