--- a/helm/ultralims/values.yaml
+++ b/helm/ultralims/values.yaml
@@ -49,6 +49,13 @@ config:
 
   importaResultado:
     url: ''
+    db:
+      driver: sqlsrv
+      host: ''
+      port: 1433
+      name: ULTRA_LIMS_IMPORT
+      user: ultralims_import
+      password: ''
 
   azureAppSecret: ''
 
@@ -122,7 +129,6 @@ redis:
   master:
     persistence:
       size: 5Gi
-      # storageClass: thin-csi
     service:
       ports: 
         redis: 6379
@@ -131,10 +137,10 @@ importaResultado:
   replicaCount: 1
 
   image:
-    repository: ghcr.io/ultralims/ultralims/importa-resultados
+    repository: ghcr.io/ultralims/importa-resultados
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "1.11"
+    tag: "1.10.002-sgb"
 
   imagePullSecrets: []
   nameOverride: ""
