atualização de versão do ultralims (web e importer); Adicionar suporte a SQL server em container

--- a/helm/ultralims/templates/web/secret.yaml
+++ b/helm/ultralims/templates/web/secret.yaml
@@ -26,5 +26,16 @@ stringData:
   JWTWIZARD: {{ .jwt.wizard | quote }}
   JWTSECRET: {{ .jwt.secret | quote }}
   AZUREAPPSECRET: {{ .azureAppSecret | quote }}
+  CLIENT_AREA_TOKEN_ID: {{ .oauth.tokenID }}
+  CLIENT_AREA_TOKEN_SECRET: {{ .oauth.tokenSecret }}
+  CLIENT_AREA_TOKEN_GRANT_TYPE: {{ .oauth.tokenGrantType }}
+  CLIENT_AREA_TOKEN_SCOPE: {{ .oauth.tokenScope }}
+  # novas variáveis
+  IDCOMPANY: {{ .empresa_server | toString | quote }}
+  DBNAME: {{ .db.name }}
+  DBHOST: {{ .db.host }}
+  DBUSER: {{ .db.user }}
+  DBPASSWORD: {{ .db.password }}
+  DBPORT: {{ .db.port | toString | quote }}
   {{- end }}
 type: Opaque
