--- a/helm/ultralims/Chart.yaml
+++ b/helm/ultralims/Chart.yaml
@@ -15,13 +15,13 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.2.0
+version: 0.3.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "3.05.026.009-sgb"
+appVersion: "3.05.026.012-sgb"
 
 dependencies:
   # https://artifacthub.io/packages/helm/bitnami/redis
@@ -29,3 +29,7 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     version: "19.5.0"
     condition: redis.enabled
+  - name: sqlserver
+    repository: https://nds-cprm.github.io/helm-charts
+    version: "0.1.0"
+    condition: sqlserver.enabled
